Initial implementation of computate-search.