@@ -77,11 +77,12 @@ import io.vertx.ext.auth.User;
 import java.util.Optional;
 import java.util.stream.Stream;
 import java.net.URLDecoder;
-import org.choicehumanitarian.reports.enus.search.SearchTool;
 import java.util.regex.Pattern;
 import java.util.regex.Matcher;
 import java.util.Map.Entry;
 import java.util.Iterator;
+import org.computate.search.tool.SearchTool;
+import org.computate.search.response.solr.SolrResponse;
 import java.util.Base64;
 import java.time.ZonedDateTime;
 import org.apache.commons.collections.CollectionUtils;
@@ -129,8 +130,8 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					try {
 						ApiRequest apiRequest = new ApiRequest();
 						JsonArray jsonArray = Optional.ofNullable(siteRequest.getJsonObject()).map(o -> o.getJsonArray("list")).orElse(new JsonArray());
-						apiRequest.setRows(jsonArray.size());
-						apiRequest.setNumFound(new Integer(jsonArray.size()).longValue());
+						apiRequest.setRows(Long.valueOf(jsonArray.size()));
+						apiRequest.setNumFound(Long.valueOf(jsonArray.size()));
 						apiRequest.setNumPATCH(0L);
 						apiRequest.initDeepApiRequest(siteRequest);
 						siteRequest.setApiRequest_(apiRequest);
@@ -229,7 +230,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 		user(serviceRequest).onSuccess(siteRequest -> {
 			try {
 				ApiRequest apiRequest = new ApiRequest();
-				apiRequest.setRows(1);
+				apiRequest.setRows(1L);
 				apiRequest.setNumFound(1L);
 				apiRequest.setNumPATCH(0L);
 				apiRequest.initDeepApiRequest(siteRequest);
@@ -241,11 +242,11 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 
 				SearchList<ChoiceReport> searchList = new SearchList<ChoiceReport>();
 				searchList.setStore(true);
-				searchList.setQuery("*:*");
+				searchList.q("*:*");
 				searchList.setC(ChoiceReport.class);
-				searchList.addFilterQuery("deleted_docvalues_boolean:false");
-				searchList.addFilterQuery("archived_docvalues_boolean:false");
-				searchList.addFilterQuery("inheritPk_docvalues_string:" + SearchTool.escapeQueryChars(body.getString("pk")));
+				searchList.fq("deleted_docvalues_boolean:false");
+				searchList.fq("archived_docvalues_boolean:false");
+				searchList.fq("inheritPk_docvalues_string:" + SearchTool.escapeQueryChars(body.getString("pk")));
 				searchList.promiseDeepForClass(siteRequest).onSuccess(a -> {
 					try {
 						if(searchList.size() >= 1) {
@@ -376,7 +377,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					));
 				} else {
 					ApiRequest apiRequest = new ApiRequest();
-					apiRequest.setRows(1);
+					apiRequest.setRows(1L);
 					apiRequest.setNumFound(1L);
 					apiRequest.setNumPATCH(0L);
 					apiRequest.initDeepApiRequest(siteRequest);
@@ -435,7 +436,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 	public void postChoiceReportFuture(JsonObject body, ServiceRequest serviceRequest, Handler<AsyncResult<ServiceResponse>> eventHandler) {
 		user(serviceRequest).onSuccess(siteRequest -> {
 			ApiRequest apiRequest = new ApiRequest();
-			apiRequest.setRows(1);
+			apiRequest.setRows(1L);
 			apiRequest.setNumFound(1L);
 			apiRequest.setNumPATCH(0L);
 			apiRequest.initDeepApiRequest(siteRequest);
@@ -827,7 +828,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					searchChoiceReportList(siteRequest, false, true, true).onSuccess(listChoiceReport -> {
 						try {
 							List<String> roles2 = Optional.ofNullable(config.getValue(ConfigKeys.AUTH_ROLES_ADMIN)).map(v -> v instanceof JsonArray ? (JsonArray)v : new JsonArray(v.toString())).orElse(new JsonArray()).getList();
-							if(listChoiceReport.getQueryResponse().getResults().getNumFound() > 1
+							if(listChoiceReport.getQueryResponse().getResponse().getNumFound() > 1
 									&& !CollectionUtils.containsAny(siteRequest.getUserResourceRoles(), roles2)
 									&& !CollectionUtils.containsAny(siteRequest.getUserRealmRoles(), roles2)
 									) {
@@ -837,8 +838,8 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 							} else {
 
 								ApiRequest apiRequest = new ApiRequest();
-								apiRequest.setRows(listChoiceReport.getRows());
-								apiRequest.setNumFound(listChoiceReport.getQueryResponse().getResults().getNumFound());
+								apiRequest.setRows(listChoiceReport.getRequest().getRows());
+								apiRequest.setNumFound(listChoiceReport.getQueryResponse().getResponse().getNumFound());
 								apiRequest.setNumPATCH(0L);
 								apiRequest.initDeepApiRequest(siteRequest);
 								siteRequest.setApiRequest_(apiRequest);
@@ -907,7 +908,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 		});
 		CompositeFuture.all(futures).onSuccess( a -> {
 			if(apiRequest != null) {
-				apiRequest.setNumPATCH(apiRequest.getNumPATCH() + listChoiceReport.getQueryResponse().getResults().size());
+				apiRequest.setNumPATCH(apiRequest.getNumPATCH() + listChoiceReport.getQueryResponse().getResponse().getDocs().size());
 				if(apiRequest.getNumFound() == 1L)
 					listChoiceReport.first().apiRequestChoiceReport();
 				eventBus.publish("websocketChoiceReport", JsonObject.mapFrom(apiRequest).toString());
@@ -938,9 +939,9 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 				searchChoiceReportList(siteRequest, false, true, true).onSuccess(listChoiceReport -> {
 					try {
 						ChoiceReport o = listChoiceReport.first();
-						if(o != null && listChoiceReport.getQueryResponse().getResults().getNumFound() == 1) {
+						if(o != null && listChoiceReport.getQueryResponse().getResponse().getNumFound() == 1) {
 							ApiRequest apiRequest = new ApiRequest();
-							apiRequest.setRows(1);
+							apiRequest.setRows(1L);
 							apiRequest.setNumFound(1L);
 							apiRequest.setNumPATCH(0L);
 							apiRequest.initDeepApiRequest(siteRequest);
@@ -1306,8 +1307,6 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 		Promise<ServiceResponse> promise = Promise.promise();
 		try {
 			SiteRequestEnUS siteRequest = listChoiceReport.getSiteRequest_();
-			SolrDocumentList solrDocuments = listChoiceReport.getSolrDocumentList();
-
 			JsonObject json = JsonObject.mapFrom(listChoiceReport.getList().stream().findFirst().orElse(null));
 			promise.complete(ServiceResponse.completedWithJson(Buffer.buffer(Optional.ofNullable(json).orElse(new JsonObject()).encodePrettily())));
 		} catch(Exception ex) {
@@ -1381,18 +1380,16 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 		Promise<ServiceResponse> promise = Promise.promise();
 		try {
 			SiteRequestEnUS siteRequest = listChoiceReport.getSiteRequest_();
-			QueryResponse responseSearch = listChoiceReport.getQueryResponse();
-			SolrDocumentList solrDocuments = listChoiceReport.getSolrDocumentList();
-			Long searchInMillis = Long.valueOf(responseSearch.getQTime());
-			Long transmissionInMillis = responseSearch.getElapsedTime();
-			Long startNum = responseSearch.getResults().getStart();
-			Long foundNum = responseSearch.getResults().getNumFound();
-			Integer returnedNum = responseSearch.getResults().size();
+			SolrResponse responseSearch = listChoiceReport.getQueryResponse();
+			List<SolrResponse.Doc> solrDocuments = listChoiceReport.getQueryResponse().getResponse().getDocs();
+			Long searchInMillis = Long.valueOf(responseSearch.getResponseHeader().getqTime());
+			Long startNum = listChoiceReport.getRequest().getStart();
+			Long foundNum = responseSearch.getResponse().getNumFound();
+			Integer returnedNum = responseSearch.getResponse().getDocs().size();
 			String searchTime = String.format("%d.%03d sec", TimeUnit.MILLISECONDS.toSeconds(searchInMillis), TimeUnit.MILLISECONDS.toMillis(searchInMillis) - TimeUnit.SECONDS.toMillis(TimeUnit.MILLISECONDS.toSeconds(searchInMillis)));
-			String transmissionTime = String.format("%d.%03d sec", TimeUnit.MILLISECONDS.toSeconds(transmissionInMillis), TimeUnit.MILLISECONDS.toMillis(transmissionInMillis) - TimeUnit.SECONDS.toSeconds(TimeUnit.MILLISECONDS.toSeconds(transmissionInMillis)));
 			String nextCursorMark = responseSearch.getNextCursorMark();
-			Exception exceptionSearch = responseSearch.getException();
-			List<String> fls = listChoiceReport.getFields();
+			String exceptionSearch = Optional.ofNullable(responseSearch.getError()).map(error -> error.getMsg()).orElse(null);
+			List<String> fls = listChoiceReport.getRequest().getFields();
 
 			JsonObject json = new JsonObject();
 			json.put("startNum", startNum);
@@ -1400,7 +1397,6 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 			json.put("returnedNum", returnedNum);
 			if(fls.size() == 1 && fls.stream().findFirst().orElse(null).equals("saves")) {
 				json.put("searchTime", searchTime);
-				json.put("transmissionTime", transmissionTime);
 			}
 			if(nextCursorMark != null) {
 				json.put("nextCursorMark", nextCursorMark);
@@ -1428,49 +1424,42 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 			});
 			json.put("list", l);
 
-			List<FacetField> facetFields = responseSearch.getFacetFields();
+			SolrResponse.FacetFields facetFields = Optional.ofNullable(responseSearch.getFacetCounts()).map(f -> f.getFacetFields()).orElse(null);
 			if(facetFields != null) {
 				JsonObject facetFieldsJson = new JsonObject();
 				json.put("facet_fields", facetFieldsJson);
-				for(FacetField facetField : facetFields) {
+				for(SolrResponse.FacetField facetField : facetFields.getFacets().values()) {
 					String facetFieldVar = StringUtils.substringBefore(facetField.getName(), "_docvalues_");
 					JsonObject facetFieldCounts = new JsonObject();
 					facetFieldsJson.put(facetFieldVar, facetFieldCounts);
-					List<FacetField.Count> facetFieldValues = facetField.getValues();
-					for(Integer i = 0; i < facetFieldValues.size(); i+= 1) {
-						FacetField.Count count = (FacetField.Count)facetFieldValues.get(i);
-						facetFieldCounts.put(count.getName(), count.getCount());
-					}
+					facetField.getCounts().forEach((name, count) -> {
+						facetFieldCounts.put(name, count);
+					});
 				}
 			}
 
-			List<RangeFacet> facetRanges = responseSearch.getFacetRanges();
+			SolrResponse.FacetRanges facetRanges = Optional.ofNullable(responseSearch.getFacetCounts()).map(f -> f.getFacetRanges()).orElse(null);
 			if(facetRanges != null) {
 				JsonObject rangeJson = new JsonObject();
 				json.put("facet_ranges", rangeJson);
-				for(RangeFacet rangeFacet : facetRanges) {
+				for(SolrResponse.FacetRange rangeFacet : facetRanges.getRanges().values()) {
 					JsonObject rangeFacetJson = new JsonObject();
 					String rangeFacetVar = StringUtils.substringBefore(rangeFacet.getName(), "_docvalues_");
 					rangeJson.put(rangeFacetVar, rangeFacetJson);
 					JsonObject rangeFacetCountsMap = new JsonObject();
 					rangeFacetJson.put("counts", rangeFacetCountsMap);
-					List<?> rangeFacetCounts = rangeFacet.getCounts();
-					for(Integer i = 0; i < rangeFacetCounts.size(); i+= 1) {
-						RangeFacet.Count count = (RangeFacet.Count)rangeFacetCounts.get(i);
-						rangeFacetCountsMap.put(count.getValue(), count.getCount());
-					}
+					rangeFacet.getCounts().forEach((name, count) -> {
+						rangeFacetCountsMap.put(name, count);
+					});
 				}
 			}
 
-			NamedList<List<PivotField>> facetPivot = responseSearch.getFacetPivot();
-			if(facetPivot != null) {
+			SolrResponse.FacetPivots facetPivots = Optional.ofNullable(responseSearch.getFacetCounts()).map(f -> f.getFacetPivots()).orElse(null);
+			if(facetPivots != null) {
 				JsonObject facetPivotJson = new JsonObject();
 				json.put("facet_pivot", facetPivotJson);
-				Iterator<Entry<String, List<PivotField>>> facetPivotIterator = responseSearch.getFacetPivot().iterator();
-				while(facetPivotIterator.hasNext()) {
-					Entry<String, List<PivotField>> pivotEntry = facetPivotIterator.next();
-					List<PivotField> pivotFields = pivotEntry.getValue();
-					String[] varsIndexed = pivotEntry.getKey().trim().split(",");
+				for(SolrResponse.FacetPivot facetPivot : facetPivots.getPivots().values()) {
+					String[] varsIndexed = facetPivot.getName().trim().split(",");
 					String[] entityVars = new String[varsIndexed.length];
 					for(Integer i = 0; i < entityVars.length; i++) {
 						String entityIndexed = varsIndexed[i];
@@ -1478,11 +1467,11 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					}
 					JsonArray pivotArray = new JsonArray();
 					facetPivotJson.put(StringUtils.join(entityVars, ","), pivotArray);
-					responsePivotSearchChoiceReport(pivotFields, pivotArray);
+					responsePivotSearchChoiceReport(facetPivot.getPivot(), pivotArray);
 				}
 			}
 			if(exceptionSearch != null) {
-				json.put("exceptionSearch", exceptionSearch.getMessage());
+				json.put("exceptionSearch", exceptionSearch);
 			}
 			promise.complete(ServiceResponse.completedWithJson(Buffer.buffer(Optional.ofNullable(json).orElse(new JsonObject()).encodePrettily())));
 		} catch(Exception ex) {
@@ -1491,8 +1480,8 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 		}
 		return promise.future();
 	}
-	public void responsePivotSearchChoiceReport(List<PivotField> pivotFields, JsonArray pivotArray) {
-		for(PivotField pivotField : pivotFields) {
+	public void responsePivotSearchChoiceReport(List<SolrResponse.Pivot> pivots, JsonArray pivotArray) {
+		for(SolrResponse.Pivot pivotField : pivots) {
 			String entityIndexed = pivotField.getField();
 			String entityVar = StringUtils.substringBefore(entityIndexed, "_docvalues_");
 			JsonObject pivotJson = new JsonObject();
@@ -1500,22 +1489,20 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 			pivotJson.put("field", entityVar);
 			pivotJson.put("value", pivotField.getValue());
 			pivotJson.put("count", pivotField.getCount());
-			List<RangeFacet> pivotRanges = pivotField.getFacetRanges();
-			List<PivotField> pivotFields2 = pivotField.getPivot();
+			Collection<SolrResponse.PivotRange> pivotRanges = pivotField.getRanges().values();
+			List<SolrResponse.Pivot> pivotFields2 = pivotField.getPivot();
 			if(pivotRanges != null) {
 				JsonObject rangeJson = new JsonObject();
 				pivotJson.put("ranges", rangeJson);
-				for(RangeFacet rangeFacet : pivotRanges) {
+				for(SolrResponse.PivotRange rangeFacet : pivotRanges) {
 					JsonObject rangeFacetJson = new JsonObject();
 					String rangeFacetVar = StringUtils.substringBefore(rangeFacet.getName(), "_docvalues_");
 					rangeJson.put(rangeFacetVar, rangeFacetJson);
 					JsonObject rangeFacetCountsObject = new JsonObject();
 					rangeFacetJson.put("counts", rangeFacetCountsObject);
-					List<?> rangeFacetCounts = rangeFacet.getCounts();
-					for(Integer i = 0; i < rangeFacetCounts.size(); i+= 1) {
-						RangeFacet.Count count = (RangeFacet.Count)rangeFacetCounts.get(i);
-						rangeFacetCountsObject.put(count.getValue(), count.getCount());
-					}
+					rangeFacet.getCounts().forEach((value, count) -> {
+						rangeFacetCountsObject.put(value, count);
+					});
 				}
 			}
 			if(pivotFields2 != null) {
@@ -1852,7 +1839,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 	}
 
 	public void searchChoiceReportQ(SearchList<ChoiceReport> searchList, String entityVar, String valueIndexed, String varIndexed) {
-		searchList.setQuery(varIndexed + ":" + ("*".equals(valueIndexed) ? valueIndexed : SearchTool.escapeQueryChars(valueIndexed)));
+		searchList.q(varIndexed + ":" + ("*".equals(valueIndexed) ? valueIndexed : SearchTool.escapeQueryChars(valueIndexed)));
 		if(!"*".equals(entityVar)) {
 		}
 	}
@@ -1875,15 +1862,15 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 	public void searchChoiceReportSort(SearchList<ChoiceReport> searchList, String entityVar, String valueIndexed, String varIndexed) {
 		if(varIndexed == null)
 			throw new RuntimeException(String.format("\"%s\" is not an indexed entity. ", entityVar));
-		searchList.addSort(varIndexed, ORDER.valueOf(valueIndexed));
+		searchList.sort(varIndexed, valueIndexed);
 	}
 
-	public void searchChoiceReportRows(SearchList<ChoiceReport> searchList, Integer valueRows) {
-			searchList.setRows(valueRows != null ? valueRows : 10);
+	public void searchChoiceReportRows(SearchList<ChoiceReport> searchList, Long valueRows) {
+			searchList.rows(valueRows != null ? valueRows : 10L);
 	}
 
-	public void searchChoiceReportStart(SearchList<ChoiceReport> searchList, Integer valueStart) {
-		searchList.setStart(valueStart);
+	public void searchChoiceReportStart(SearchList<ChoiceReport> searchList, Long valueStart) {
+		searchList.start(valueStart);
 	}
 
 	public void searchChoiceReportVar(SearchList<ChoiceReport> searchList, String var, String value) {
@@ -1932,17 +1919,17 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 			SearchList<ChoiceReport> searchList = new SearchList<ChoiceReport>();
 			searchList.setPopulate(populate);
 			searchList.setStore(store);
-			searchList.setQuery("*:*");
+			searchList.q("*:*");
 			searchList.setC(ChoiceReport.class);
 			searchList.setSiteRequest_(siteRequest);
 			if(entityList != null)
-				searchList.addFields(entityList);
+				searchList.fl(entityList);
 
 			String id = serviceRequest.getParams().getJsonObject("path").getString("id");
 			if(id != null && NumberUtils.isCreatable(id)) {
-				searchList.addFilterQuery("(pk_docvalues_long:" + SearchTool.escapeQueryChars(id) + " OR objectId_docvalues_string:" + SearchTool.escapeQueryChars(id) + ")");
+				searchList.fq("(pk_docvalues_long:" + SearchTool.escapeQueryChars(id) + " OR objectId_docvalues_string:" + SearchTool.escapeQueryChars(id) + ")");
 			} else if(id != null) {
-				searchList.addFilterQuery("objectId_docvalues_string:" + SearchTool.escapeQueryChars(id));
+				searchList.fq("objectId_docvalues_string:" + SearchTool.escapeQueryChars(id));
 			}
 
 			serviceRequest.getParams().getJsonObject("query").forEach(paramRequest -> {
@@ -1950,8 +1937,8 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 				String valueIndexed = null;
 				String varIndexed = null;
 				String valueSort = null;
-				Integer valueStart = null;
-				Integer valueRows = null;
+				Long valueStart = null;
+				Long valueRows = null;
 				String valueCursorMark = null;
 				String paramName = paramRequest.getKey();
 				Object paramValuesObject = paramRequest.getValue();
@@ -1969,7 +1956,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 								entityVar = entityVars[i];
 								varsIndexed[i] = ChoiceReport.varIndexedChoiceReport(entityVar);
 							}
-							searchList.add("facet.pivot", (solrLocalParams == null ? "" : solrLocalParams) + StringUtils.join(varsIndexed, ","));
+							searchList.facetPivot((solrLocalParams == null ? "" : solrLocalParams) + StringUtils.join(varsIndexed, ","));
 						}
 					} else if(paramValuesObject != null) {
 						for(Object paramObject : paramObjects) {
@@ -1988,7 +1975,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 											foundQ = mQ.find();
 										}
 										mQ.appendTail(sb);
-										searchList.setQuery(sb.toString());
+										searchList.q(sb.toString());
 									}
 									break;
 								case "fq":
@@ -2005,7 +1992,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 											foundFq = mFq.find();
 										}
 										mFq.appendTail(sb);
-										searchList.addFilterQuery(sb.toString());
+										searchList.fq(sb.toString());
 									}
 									break;
 								case "sort":
@@ -2015,29 +2002,29 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 									searchChoiceReportSort(searchList, entityVar, valueIndexed, varIndexed);
 									break;
 								case "start":
-									valueStart = paramObject instanceof Integer ? (Integer)paramObject : Integer.parseInt(paramObject.toString());
+									valueStart = paramObject instanceof Long ? (Long)paramObject : Long.parseLong(paramObject.toString());
 									searchChoiceReportStart(searchList, valueStart);
 									break;
 								case "rows":
-									valueRows = paramObject instanceof Integer ? (Integer)paramObject : Integer.parseInt(paramObject.toString());
+									valueRows = paramObject instanceof Long ? (Long)paramObject : Long.parseLong(paramObject.toString());
 									searchChoiceReportRows(searchList, valueRows);
 									break;
 								case "facet":
-									searchList.add("facet", ((Boolean)paramObject).toString());
+									searchList.facet((Boolean)paramObject);
 									break;
 								case "facet.range.start":
 									String startMathStr = (String)paramObject;
 									Date start = SearchTool.parseMath(startMathStr);
-									searchList.add("facet.range.start", start.toInstant().toString());
+									searchList.facetRangeStart(start.toInstant().toString());
 									break;
 								case "facet.range.end":
 									String endMathStr = (String)paramObject;
 									Date end = SearchTool.parseMath(endMathStr);
-									searchList.add("facet.range.end", end.toInstant().toString());
+									searchList.facetRangeEnd(end.toInstant().toString());
 									break;
 								case "facet.range.gap":
 									String gap = (String)paramObject;
-									searchList.add("facet.range.gap", gap);
+									searchList.facetRangeGap(gap);
 									break;
 								case "facet.range":
 									Matcher mFacetRange = Pattern.compile("(?:(\\{![^\\}]+\\}))?(.*)").matcher((String)paramObject);
@@ -2046,14 +2033,14 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 										String solrLocalParams = mFacetRange.group(1);
 										entityVar = mFacetRange.group(2).trim();
 										varIndexed = ChoiceReport.varIndexedChoiceReport(entityVar);
-										searchList.add("facet.range", (solrLocalParams == null ? "" : solrLocalParams) + varIndexed);
+										searchList.facetRange((solrLocalParams == null ? "" : solrLocalParams) + varIndexed);
 									}
 									break;
 								case "facet.field":
 									entityVar = (String)paramObject;
 									varIndexed = ChoiceReport.varIndexedChoiceReport(entityVar);
 									if(varIndexed != null)
-										searchList.addFacetField(varIndexed);
+										searchList.facetField(varIndexed);
 									break;
 								case "var":
 									entityVar = StringUtils.trim(StringUtils.substringBefore((String)paramObject, ":"));
@@ -2062,7 +2049,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 									break;
 								case "cursorMark":
 									valueCursorMark = (String)paramObject;
-									searchList.add("cursorMark", (String)paramObject);
+									searchList.cursorMark((String)paramObject);
 									break;
 							}
 						}
@@ -2073,7 +2060,7 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 				}
 			});
 			if("*:*".equals(searchList.getQuery()) && searchList.getSorts().size() == 0) {
-				searchList.addSort("created_docvalues_date", ORDER.desc);
+				searchList.sort("created_docvalues_date", "desc");
 			}
 			searchChoiceReport2(siteRequest, populate, store, modify, searchList);
 			searchList.promiseDeepForClass(siteRequest).onSuccess(a -> {
@@ -2171,8 +2158,12 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 			SiteRequestEnUS siteRequest = o.getSiteRequest_();
 			ApiRequest apiRequest = siteRequest.getApiRequest_();
 			o.promiseDeepForClass(siteRequest).onSuccess(a -> {
-				SolrInputDocument document = new SolrInputDocument();
-				o.indexChoiceReport(document);
+				JsonObject json = new JsonObject();
+				JsonObject add = new JsonObject();
+				json.put("add", add);
+				JsonObject doc = new JsonObject();
+				add.put("doc", doc);
+				o.indexChoiceReport(doc);
 				String solrHostName = siteRequest.getConfig().getString(ConfigKeys.SOLR_HOST_NAME);
 				Integer solrPort = siteRequest.getConfig().getInteger(ConfigKeys.SOLR_PORT);
 				String solrCollection = siteRequest.getConfig().getString(ConfigKeys.SOLR_COLLECTION);
@@ -2183,7 +2174,6 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					else if(softCommit == null)
 						softCommit = false;
 				String solrRequestUri = String.format("/solr/%s/update%s%s%s", solrCollection, "?overwrite=true&wt=json", softCommit ? "&softCommit=true" : "", commitWithin != null ? ("&commitWithin=" + commitWithin) : "");
-				JsonArray json = new JsonArray().add(new JsonObject(document.toMap(new HashMap<String, Object>())));
 				webClient.post(solrPort, solrHostName, solrRequestUri).putHeader("Content-Type", "application/json").expect(ResponsePredicate.SC_OK).sendBuffer(json.toBuffer()).onSuccess(b -> {
 					promise.complete();
 				}).onFailure(ex -> {
@@ -2219,10 +2209,10 @@ public class ChoiceReportEnUSGenApiServiceImpl extends BaseApiServiceImpl implem
 					if("ChoiceDonor".equals(classSimpleName2) && pk2 != null) {
 						SearchList<ChoiceDonor> searchList2 = new SearchList<ChoiceDonor>();
 						searchList2.setStore(true);
-						searchList2.setQuery("*:*");
+						searchList2.q("*:*");
 						searchList2.setC(ChoiceDonor.class);
-						searchList2.addFilterQuery("pk_docvalues_long:" + pk2);
-						searchList2.setRows(1);
+						searchList2.fq("pk_docvalues_long:" + pk2);
+						searchList2.rows(1L);
 						futures.add(Future.future(promise2 -> {
 							searchList2.promiseDeepSearchList(siteRequest).onSuccess(b -> {
 								ChoiceDonor o2 = searchList2.getList().stream().findFirst().orElse(null);
